Write Email in .txt file